@@ -1,18 +1,23 @@
 <%= render :partial => "action_nav" %>
 <% form_for @asset, :html => { :multipart => true } do |f| %>
   <%= error_messages_for :asset %>
-  <dl class="group">
-    <dt><label for="asset_title">Title</label></dt>
-    <dd><%= f.text_field :title %></dd>
-    <dt><label for="asset_tag">Tags</label> <span class="hint">Enter one or more tags separated by a comma.</span></dt>
-    <dd><%= f.text_field :tag %></dd>
-    <dt><label for="asset_uploaded_data">Select a file</label></dt>
-    <dd class="asset_data"><%= file_field_tag 'asset_data[]', :id => 'asset_data_1' %></dd>
+  <dl class="group" id="fileform">
+    <dt id="filelbls">
+      <label for="asset_data">Select files to upload</label>
+      <label for="asset_tags" id="taglbl">Tags (comma separated)</label>
+      </dt>
+    <dd class="asset-data">
+      <ul id="filefields">
+        <li>
+          <%= file_field_tag 'asset_data[]', :id => 'asset_data_1' %>
+          <%= f.text_field :tag, :size => '' %>
+          <a href="#" class="remove-file"><%= image_tag '/images/mephisto/icons/trash.gif', :class => 'iconb red' %></a>
+          <a href="#" class="tagsall" id="tagsall" style="display:none">Apply tags to all</a>
+        </li>
+      </ul>
+    </dd>
   </dl>
-  
-  <p>
-    <a href="#" id="asset_add_file">add file</a>
-  </p>
+  <a href="#" id="asset-add-file" class="bottom-tab">Add another file</a>
 
   <p class="btns">
     <%= submit_tag 'Upload Asset' %>
